--- a/requirements.txt
+++ b/requirements.txt
@@ -165,7 +165,7 @@ unlzw3==0.2.3
 urllib3==2.3.0
 uuid_utils==0.12.0
 uvicorn==0.38.0
-uvloop==0.22.1
+uvloop==0.22.1; sys_platform != 'win32'
 warc3-wet==0.2.5
 warc3-wet-clueweb09==0.2.5
 watchfiles==1.1.1
