--- a/configs/config_submit.yaml
+++ b/configs/config_submit.yaml
@@ -1,3 +1,5 @@
 ollama:
   host: "http://ollama-gateway:11434"
   model: "granite4:3b"
+  embedding_model_en: "embeddinggemma:300m" # 新增：英文 Embedding
+  embedding_model_zh: "qwen3-embedding:0.6b" # 新增：中文 Embedding
